--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pixels Art</title>
-</head>
-<body>
-  <h1 id='title'>Paleta de Cores</h1>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Pixels Art</title>
+  </head>
+  <body>
+    <header>
+      <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <section>
+      <ul id="color-palette">
+        <li class="color"></li>
+        <li class="color"></li>
+        <li class="color"></li>
+        <li class="color"></li>
+      </ul>
+    </section>
+    <section>
+      <ul id="pixel-board" class="board">
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+      </ul>
+      <ul class="board">
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+      </ul>
+      <ul class="board">
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+      </ul>
+      <ul class="board">
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+      </ul>
+      <ul class="board">
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+        <li class="pixel"></li>
+      </ul>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
