--- a/index.html
+++ b/index.html
@@ -8,54 +8,59 @@
     <title>Pixels Art</title>
   </head>
   <body>
-    <header>
-      <h1 id="title">Paleta de Cores</h1>
-    </header>
-    <section>
-      <ul id="color-palette">
-        <li class="color"></li>
-        <li class="color"></li>
-        <li class="color"></li>
-        <li class="color"></li>
-      </ul>
-    </section>
-    <section>
-      <ul id="pixel-board" class="board">
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-      </ul>
-      <ul class="board">
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-      </ul>
-      <ul class="board">
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-      </ul>
-      <ul class="board">
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-      </ul>
-      <ul class="board">
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-        <li class="pixel"></li>
-      </ul>
-    </section>
+    <main>
+      <header>
+        <h1 id="title">Paleta de Cores</h1>
+      </header>
+      <section>
+        <ul id="color-palette">
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+        </ul>
+      </section>
+      <nav id="nav-box">
+        <button id="clear-board" class="button">Limpar</button>
+      </nav>
+      <section>
+        <ul id="pixel-board" class="board">
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+        </ul>
+        <ul class="board">
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+        </ul>
+        <ul class="board">
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+        </ul>
+        <ul class="board">
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+        </ul>
+        <ul class="board">
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+          <li class="pixel"></li>
+        </ul>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
