todos os requisitos e correcoes

--- a/index.html
+++ b/index.html
@@ -26,49 +26,14 @@
           name="number"
           id="board-size"
           class="nav-buttons"
-          min="5"
-          max="50"
+          min="1"
           placeholder="num"
         />
         <button id="generate-board" class="nav-buttons">VQV</button>
         <button id="clear-board" class="nav-buttons">Limpar</button>
       </nav>
-      <section>
-        <ul id="pixel-board" class="board">
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-        </ul>
-        <ul class="board">
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-        </ul>
-        <ul class="board">
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-        </ul>
-        <ul class="board">
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-        </ul>
-        <ul class="board">
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-          <li class="pixel"></li>
-        </ul>
+      <section id="pixel-board" class="board">
+
       </section>
     </main>
     <script src="script.js"></script>
