--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           id="board-size"
           class="nav-buttons"
           min="1"
-          placeholder="num"
+          placeholder="size"
         />
         <button id="generate-board" class="nav-buttons">VQV</button>
         <button id="clear-board" class="nav-buttons">Limpar</button>
       </nav>
-      <section id="pixel-board" class="board">
-
+      <section id="pixel-board">
+       
       </section>
     </main>
     <script src="script.js"></script>
